Adding NMI-triggered sample buffering

--- a/src/vrc4/ssplayer-128k.cfg
+++ b/src/vrc4/ssplayer-128k.cfg
@@ -1,7 +1,11 @@
 MEMORY {
     ZP:         start = $00,    size = $0100, type = rw, file = "";
-    STACK:      start = $0100,  size = $0100, type = rw, file = "";
-    RAM:        start = $0200,  size = $0600, type = rw, file = "";
+    SHORTRAM:   start = $0100,  size = $00b8, type = rw, file = "";
+    IRQCODE:    start = $01b8,  size = $0018, type = rw, file = "";
+    STACK:      start = $01d0,  size = $0030, type = rw, file = "";
+    OAM:        start = $0200,  size = $0100, type = rw, file = "";
+    BUF:        start = $0300,  size = $0100, type = rw, file = "";
+    RAM:        start = $0400,  size = $0400, type = rw, file = "";
     HDR:        start = $0000,  size = $0010, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_00:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_01:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
@@ -22,9 +26,12 @@ MEMORY {
 }
 
 SEGMENTS {
-    ZEROPAGE: load = ZP,  type = zp;
-    BSS:      load = RAM, type = bss, start = $0200;
-    HEADER:   load = HDR, type = ro;
+    ZEROPAGE:     load = ZP,       type = zp;
+    SHORTRAM:     load = SHORTRAM, type = bss;
+    SAMPLE_BUF:   load = BUF,      type = bss;
+    OAM:          load = OAM,      type = bss;
+    BSS:          load = RAM,      type = bss;
+    HEADER:       load = HDR,      type = ro;
     
     BANK_00: load = BANK_00, type = ro;
     BANK_01: load = BANK_01, type = ro, optional = yes;
@@ -35,7 +42,7 @@ SEGMENTS {
     BANK_06: load = BANK_06, type = ro, optional = yes;
     BANK_07: load = BANK_07, type = ro, optional = yes;
     
-    PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = RAM, define = yes;
+    PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = FIXED_BANK_0e,  type = ro;
     DECODE:         load = FIXED_BANK_0f,  type = ro;
     DECODE_TABLES:  load = FIXED_BANK_0f,  type = ro, align = $100;
