--- a/src/vrc4/ssplayer-128k.cfg
+++ b/src/vrc4/ssplayer-128k.cfg
@@ -1,8 +1,8 @@
 MEMORY {
-    ZP:         start = $00,    size = $0100, type = rw, file = "";
-    SHORTRAM:   start = $0100,  size = $00b8, type = rw, file = "";
-    IRQCODE:    start = $01b8,  size = $0018, type = rw, file = "";
-    STACK:      start = $01d0,  size = $0030, type = rw, file = "";
+    ZP:         start = $10,    size = $f0,   type = rw, file = "";
+    SHORTRAM:   start = $0100,  size = $00a0, type = rw, file = "";
+    IRQCODE:    start = $01a0,  size = $0020, type = rw, file = "";
+    STACK:      start = $01c0,  size = $0040, type = rw, file = "";
     OAM:        start = $0200,  size = $0100, type = rw, file = "";
     BUF:        start = $0300,  size = $0100, type = rw, file = "";
     RAM:        start = $0400,  size = $0400, type = rw, file = "";
@@ -22,7 +22,8 @@ MEMORY {
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     FIXED_BANK_0e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_0f:         start = $8000,  size = $0280, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_0f:   start = $e280,  size = $1d80, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -41,11 +42,18 @@ SEGMENTS {
     BANK_05: load = BANK_05, type = ro, optional = yes;
     BANK_06: load = BANK_06, type = ro, optional = yes;
     BANK_07: load = BANK_07, type = ro, optional = yes;
+    BANK_08: load = BANK_08, type = ro, optional = yes;
+    BANK_09: load = BANK_09, type = ro, optional = yes;
+    BANK_0a: load = BANK_0a, type = ro, optional = yes;
+    BANK_0b: load = BANK_0b, type = ro, optional = yes;
+    BANK_0c: load = BANK_0c, type = ro, optional = yes;
+    BANK_0d: load = BANK_0d, type = ro, optional = yes;
+    BANK_0f: load = BANK_0f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = FIXED_BANK_0e,  type = ro;
-    DECODE:         load = FIXED_BANK_0f,  type = ro;
-    DECODE_TABLES:  load = FIXED_BANK_0f,  type = ro, align = $100;
+    DECODE_UNROLL:  load = FIXED_BANK_0e,  type = ro, align = $100;
+    DECODE:         load = FIXED_BANK_0e,  type = ro;
+    DECODE_TABLES:  load = FIXED_BANK_0e,  type = ro, align = $100;
     MAIN:           load = FIXED_BANK_0f,  type = ro;
     HDRS:           load = FIXED_BANK_0f,  type = ro;
     INIT:           load = FIXED_BANK_0f,  type = ro;
