--- a/src/vrc4/ssplayer-64k.cfg
+++ b/src/vrc4/ssplayer-64k.cfg
@@ -1,5 +1,5 @@
 MEMORY {
-    ZP:         start = $00,    size = $0100, type = rw, file = "";
+    ZP:         start = $10,    size = $0f0, type = rw, file = "";
     SHORTRAM:   start = $0100,  size = $00b8, type = rw, file = "";
     IRQCODE:    start = $01b8,  size = $0018, type = rw, file = "";
     STACK:      start = $01d0,  size = $0030, type = rw, file = "";
@@ -36,7 +36,9 @@ SEGMENTS {
     BANK_07: load = BANK_07, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_07,  type = rw, run = IRQCODE, define = yes;
+    DECODE_UNROLL:  load = FIXED_BANK_07,  type = ro, align = $100;
     DECODE:         load = FIXED_BANK_07,  type = ro;
+    DECODE_TABLES:  load = FIXED_BANK_07,  type = ro, align = $100;
     MAIN:           load = FIXED_BANK_07,  type = ro;
     HDRS:           load = FIXED_BANK_07,  type = ro;
     INIT:           load = FIXED_BANK_07,  type = ro;
