Adding 1-bit SSDPCM decode routine

--- a/src/vrc4/ssplayer-64k.cfg
+++ b/src/vrc4/ssplayer-64k.cfg
@@ -36,7 +36,7 @@ SEGMENTS {
     BANK_07: load = BANK_07, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_07,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = FIXED_BANK_07,  type = ro, align = $100;
+    DECODE_UNROLL:  load = FIXED_BANK_07,  type = ro, align = $100, optional = yes;
     DECODE:         load = FIXED_BANK_07,  type = ro;
     DECODE_TABLES:  load = FIXED_BANK_07,  type = ro, align = $100;
     MAIN:           load = FIXED_BANK_07,  type = ro;
