--- a/src/mmc5a/ssplayer-128k.cfg
+++ b/src/mmc5a/ssplayer-128k.cfg
@@ -22,8 +22,8 @@ MEMORY {
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_0f:         start = $8000,  size = $0280, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $e280,  size = $1d80, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_0f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_0f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -52,8 +52,8 @@ SEGMENTS {
     
     PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = BANK_0e,        type = ro, align = $100;
-    DECODE:         load = FIXED_BANK_0f,  type = ro;
-    DECODE_TABLES:  load = FIXED_BANK_0f,  type = ro, align = $100;
+    DECODE:         load = BANK_0e,        type = ro;
+    DECODE_TABLES:  load = BANK_0e,        type = ro, align = $100;
     MAIN:           load = FIXED_BANK_0f,  type = ro;
     HDRS:           load = FIXED_BANK_0f,  type = ro;
     INIT:           load = FIXED_BANK_0f,  type = ro;
