--- a/src/vrc4/ssplayer-256k.cfg
+++ b/src/vrc4/ssplayer-256k.cfg
@@ -21,9 +21,25 @@ MEMORY {
     BANK_0b:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_0f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_0e:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_0f:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_10:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_11:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_12:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_13:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_14:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_15:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_16:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_17:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_18:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_19:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1a:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1b:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_1e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_1f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -48,16 +64,32 @@ SEGMENTS {
     BANK_0b: load = BANK_0b, type = ro, optional = yes;
     BANK_0c: load = BANK_0c, type = ro, optional = yes;
     BANK_0d: load = BANK_0d, type = ro, optional = yes;
+    BANK_0f: load = BANK_0e, type = ro, optional = yes;
     BANK_0f: load = BANK_0f, type = ro, optional = yes;
+    BANK_00: load = BANK_10, type = ro, optional = yes;
+    BANK_01: load = BANK_11, type = ro, optional = yes;
+    BANK_02: load = BANK_12, type = ro, optional = yes;
+    BANK_03: load = BANK_13, type = ro, optional = yes;
+    BANK_04: load = BANK_14, type = ro, optional = yes;
+    BANK_05: load = BANK_15, type = ro, optional = yes;
+    BANK_06: load = BANK_16, type = ro, optional = yes;
+    BANK_07: load = BANK_17, type = ro, optional = yes;
+    BANK_08: load = BANK_18, type = ro, optional = yes;
+    BANK_09: load = BANK_19, type = ro, optional = yes;
+    BANK_0a: load = BANK_1a, type = ro, optional = yes;
+    BANK_0b: load = BANK_1b, type = ro, optional = yes;
+    BANK_0c: load = BANK_1c, type = ro, optional = yes;
+    BANK_0d: load = BANK_1d, type = ro, optional = yes;
+    BANK_0f: load = BANK_1f, type = ro, optional = yes;
     
-    PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = FIXED_BANK_0e,  type = ro, align = $100, optional = yes;
-    DECODE:         load = FIXED_BANK_0e,  type = ro;
-    DECODE_TABLES:  load = FIXED_BANK_0e,  type = ro, align = $100;
-    MAIN:           load = FIXED_BANK_0f,  type = ro;
-    HDRS:           load = FIXED_BANK_0f,  type = ro;
-    INIT:           load = FIXED_BANK_0f,  type = ro;
-    VECTORS:        load = FIXED_BANK_0f,  type = ro,  start = $FFFA;
+    PLAYBACK_CODE:  load = FIXED_BANK_1f,  type = rw, run = IRQCODE, define = yes;
+    DECODE_UNROLL:  load = FIXED_BANK_1e,  type = ro, align = $100, optional = yes;
+    DECODE:         load = FIXED_BANK_1e,  type = ro;
+    DECODE_TABLES:  load = FIXED_BANK_1e,  type = ro, align = $100;
+    MAIN:           load = FIXED_BANK_1f,  type = ro;
+    HDRS:           load = FIXED_BANK_1f,  type = ro;
+    INIT:           load = FIXED_BANK_1f,  type = ro;
+    VECTORS:        load = FIXED_BANK_1f,  type = ro,  start = $FFFA;
 
 }
 
