--- a/src/vrc7/ssplayer-512k.cfg
+++ b/src/vrc7/ssplayer-512k.cfg
@@ -69,9 +69,9 @@ MEMORY {
     BANK_3b:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_3c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_3d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_3e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_3f:         start = $8000,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_3f:   start = $e400,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_3e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_3f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_3f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -147,9 +147,9 @@ SEGMENTS {
     BANK_3f: load = BANK_3f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_3f,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = FIXED_BANK_3e,  type = ro, align = $100;
-    DECODE:         load = FIXED_BANK_3e,  type = ro;
-    DECODE_TABLES:  load = FIXED_BANK_3e,  type = ro, align = $100;
+    DECODE_UNROLL:  load = BANK_3e,        type = ro, align = $100;
+    DECODE:         load = BANK_3e,        type = ro;
+    DECODE_TABLES:  load = BANK_3e,        type = ro, align = $100;
     MAIN:           load = FIXED_BANK_3f,  type = ro;
     HDRS:           load = FIXED_BANK_3f,  type = ro;
     INIT:           load = FIXED_BANK_3f,  type = ro;
