Updating README, expanding on 1-bit routines

--- a/src/vrc7/ssplayer-512k.cfg
+++ b/src/vrc7/ssplayer-512k.cfg
@@ -147,7 +147,7 @@ SEGMENTS {
     BANK_3f: load = BANK_3f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_3f,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = BANK_3e,        type = ro, align = $100;
+    DECODE_UNROLL:  load = BANK_3e,        type = ro, align = $100, optional = yes;
     DECODE:         load = BANK_3e,        type = ro;
     DECODE_TABLES:  load = BANK_3e,        type = ro, align = $100;
     MAIN:           load = FIXED_BANK_3f,  type = ro;
