Adding FME-7 support, fixing IRQ-NMI conflict

--- a/src/fme-7/ssplayer-256k.cfg
+++ b/src/fme-7/ssplayer-256k.cfg
@@ -1,7 +1,7 @@
 MEMORY {
     ZP:         start = $10,    size = $f0,   type = rw, file = "";
-    SHORTRAM:   start = $0100,  size = $00a0, type = rw, file = "";
-    IRQCODE:    start = $01a0,  size = $0020, type = rw, file = "";
+    SHORTRAM:   start = $0100,  size = $0090, type = rw, file = "";
+    IRQCODE:    start = $0190,  size = $0030, type = rw, file = "";
     STACK:      start = $01c0,  size = $0040, type = rw, file = "";
     OAM:        start = $0200,  size = $0100, type = rw, file = "";
     BUF:        start = $0300,  size = $0100, type = rw, file = "";
@@ -37,7 +37,7 @@ MEMORY {
     BANK_1b:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_1c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_1d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_1e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_1e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_1f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
     FIXED_BANK_1f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
 }
@@ -83,9 +83,9 @@ SEGMENTS {
     BANK_1f: load = BANK_1f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_1f,  type = rw, run = IRQCODE, define = yes;
-    DECODE_UNROLL:  load = FIXED_BANK_1e,  type = ro, align = $100, optional = yes;
-    DECODE:         load = FIXED_BANK_1e,  type = ro;
-    DECODE_TABLES:  load = FIXED_BANK_1e,  type = ro, align = $100;
+    DECODE_UNROLL:  load = BANK_1e,        type = ro, align = $100, optional = yes;
+    DECODE:         load = BANK_1e,        type = ro;
+    DECODE_TABLES:  load = BANK_1e,        type = ro, align = $100;
     MAIN:           load = FIXED_BANK_1f,  type = ro;
     HDRS:           load = FIXED_BANK_1f,  type = ro;
     INIT:           load = FIXED_BANK_1f,  type = ro;
@@ -94,11 +94,11 @@ SEGMENTS {
 }
 
 SYMBOLS {
-    INES_MAPPER:    type = weak, value = 23;   # VRC4: A0 = A0, A1 = A1
+    INES_MAPPER:    type = weak, value = 69;   # FME-7
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
-    INES_PRG_BANKS: type = weak, value = 8;    # 16 * 8 = 128 KiB PRG
+    INES_PRG_BANKS: type = weak, value = 16;   # 16 * 16 = 256 KiB PRG
     INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
     
-    MAPPER_VRC4:    type = weak, value = 1;
+    MAPPER_FME7:    type = weak, value = 1;
 }
