--- a/src/vrc4/ssplayer-128k.cfg
+++ b/src/vrc4/ssplayer-128k.cfg
@@ -22,8 +22,9 @@ MEMORY {
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     FIXED_BANK_0e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_0f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    BANK_0f:         start = $8000,  size = $1000, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_0f:   start = $f000,  size = $1000, type = ro, file = %O, fill = yes, fillval = $00;
+    CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -59,6 +60,7 @@ SEGMENTS {
     INIT:           load = FIXED_BANK_0f,  type = ro;
     VECTORS:        load = FIXED_BANK_0f,  type = ro,  start = $FFFA;
 
+    CHR:            load = CHR,            type = ro;
 }
 
 SYMBOLS {
@@ -66,7 +68,7 @@ SYMBOLS {
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
     INES_PRG_BANKS: type = weak, value = 8;    # 16 * 8 = 128 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_CHR_BANKS: type = weak, value = 1;    #  8 * 1 = 8 KiB CHR
     
     MAPPER_VRC4:    type = weak, value = 1;
 }
