Adding checks to all branches in non-irq code

--- a/non-irq/src/uxrom/ssplayer-256k.cfg
+++ b/non-irq/src/uxrom/ssplayer-256k.cfg
@@ -1,7 +1,6 @@
 MEMORY {
     ZP:         start = $10,    size = $f0,   type = rw, file = "";
-    SHORTRAM:   start = $0100,  size = $00a0, type = rw, file = "";
-    IRQCODE:    start = $01a0,  size = $0020, type = rw, file = "";
+    SHORTRAM:   start = $0100,  size = $00c0, type = rw, file = "";
     STACK:      start = $01c0,  size = $0040, type = rw, file = "";
     OAM:        start = $0200,  size = $0100, type = rw, file = "";
     BUF:        start = $0300,  size = $0100, type = rw, file = "";
@@ -28,7 +27,6 @@ MEMORY {
 SEGMENTS {
     ZEROPAGE:     load = ZP,       type = zp;
     SHORTRAM:     load = SHORTRAM, type = bss;
-    SAMPLE_BUF:   load = BUF,      type = bss;
     OAM:          load = OAM,      type = bss;
     BSS:          load = RAM,      type = bss;
     HEADER:       load = HDR,      type = ro;
