Updating linker configs for graphics support and better mapping

--- a/irq/src/n163/ssplayer-128k.cfg
+++ b/irq/src/n163/ssplayer-128k.cfg
@@ -22,8 +22,8 @@ MEMORY {
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_0f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_0f:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -48,7 +48,8 @@ SEGMENTS {
     BANK_0b: load = BANK_0b, type = ro, optional = yes;
     BANK_0c: load = BANK_0c, type = ro, optional = yes;
     BANK_0d: load = BANK_0d, type = ro, optional = yes;
-    BANK_0f: load = BANK_0f, type = ro, optional = yes;
+    BANK_0e: load = BANK_0e, type = ro, optional = yes;
+    BANK_0f: load = FIXED_BANK_0f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = BANK_0e,        type = ro, align = $100;
@@ -59,6 +60,7 @@ SEGMENTS {
     INIT:           load = FIXED_BANK_0f,  type = ro;
     VECTORS:        load = FIXED_BANK_0f,  type = ro,  start = $FFFA;
 
+    CHR:            load = CHR,            type = ro;
 }
 
 SYMBOLS {
@@ -66,7 +68,7 @@ SYMBOLS {
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
     INES_PRG_BANKS: type = weak, value = 8;    # 16 * 8 = 128 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_CHR_BANKS: type = weak, value = 1;    #  8 * 1 = 8 KiB CHR
     
     MAPPER_N163:    type = weak, value = 1;
 }
