--- a/irq/src/vrc4/ssplayer-128k.cfg
+++ b/irq/src/vrc4/ssplayer-128k.cfg
@@ -22,8 +22,7 @@ MEMORY {
     BANK_0c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_0d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     FIXED_BANK_0e:   start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_0f:         start = $8000,  size = $1000, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_0f:   start = $f000,  size = $1000, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_0f:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
@@ -49,7 +48,8 @@ SEGMENTS {
     BANK_0b: load = BANK_0b, type = ro, optional = yes;
     BANK_0c: load = BANK_0c, type = ro, optional = yes;
     BANK_0d: load = BANK_0d, type = ro, optional = yes;
-    BANK_0f: load = BANK_0f, type = ro, optional = yes;
+    BANK_0e: load = FIXED_BANK_0e, type = ro, optional = yes;
+    BANK_0f: load = FIXED_BANK_0f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = FIXED_BANK_0e,  type = ro, align = $100, optional = yes;
