--- a/irq/src/fme-7/ssplayer-256k.cfg
+++ b/irq/src/fme-7/ssplayer-256k.cfg
@@ -38,8 +38,8 @@ MEMORY {
     BANK_1c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_1d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_1e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_1f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_1f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_1f:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -80,7 +80,8 @@ SEGMENTS {
     BANK_1b: load = BANK_1b, type = ro, optional = yes;
     BANK_1c: load = BANK_1c, type = ro, optional = yes;
     BANK_1d: load = BANK_1d, type = ro, optional = yes;
-    BANK_1f: load = BANK_1f, type = ro, optional = yes;
+    BANK_1e: load = BANK_1e, type = ro, optional = yes;
+    BANK_1f: load = FIXED_BANK_1f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_1f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = BANK_1e,        type = ro, align = $100, optional = yes;
@@ -91,6 +92,7 @@ SEGMENTS {
     INIT:           load = FIXED_BANK_1f,  type = ro;
     VECTORS:        load = FIXED_BANK_1f,  type = ro,  start = $FFFA;
 
+    CHR:            load = CHR,            type = ro;
 }
 
 SYMBOLS {
@@ -98,7 +100,7 @@ SYMBOLS {
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
     INES_PRG_BANKS: type = weak, value = 16;   # 16 * 16 = 256 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_CHR_BANKS: type = weak, value = 1;    #  8 * 1 = 8 KiB CHR
     
     MAPPER_FME7:    type = weak, value = 1;
 }
