--- a/irq/src/fme-7/ssplayer-512k.cfg
+++ b/irq/src/fme-7/ssplayer-512k.cfg
@@ -70,8 +70,8 @@ MEMORY {
     BANK_3c:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_3d:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_3e:         start = $c000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_3f:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_3f:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_3f:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -144,7 +144,8 @@ SEGMENTS {
     BANK_3b: load = BANK_3b, type = ro, optional = yes;
     BANK_3c: load = BANK_3c, type = ro, optional = yes;
     BANK_3d: load = BANK_3d, type = ro, optional = yes;
-    BANK_3f: load = BANK_3f, type = ro, optional = yes;
+    BANK_3e: load = BANK_3e, type = ro, optional = yes;
+    BANK_3f: load = FIXED_BANK_3f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_3f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = BANK_3e,        type = ro, align = $100, optional = yes;
@@ -155,6 +156,7 @@ SEGMENTS {
     INIT:           load = FIXED_BANK_3f,  type = ro;
     VECTORS:        load = FIXED_BANK_3f,  type = ro,  start = $FFFA;
 
+    CHR:            load = CHR,            type = ro;
 }
 
 SYMBOLS {
@@ -162,7 +164,7 @@ SYMBOLS {
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
     INES_PRG_BANKS: type = weak, value = 32;   # 16 * 32 = 512 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_CHR_BANKS: type = weak, value = 1;    #  8 * 1 = 8 KiB CHR
     
     MAPPER_FME7:    type = weak, value = 1;
 }
