--- a/irq/src/vrc4/ssplayer-64k.cfg
+++ b/irq/src/vrc4/ssplayer-64k.cfg
@@ -1,8 +1,8 @@
 MEMORY {
     ZP:         start = $10,    size = $0f0, type = rw, file = "";
-    SHORTRAM:   start = $0100,  size = $00b8, type = rw, file = "";
-    IRQCODE:    start = $01b8,  size = $0018, type = rw, file = "";
-    STACK:      start = $01d0,  size = $0030, type = rw, file = "";
+    SHORTRAM:   start = $0100,  size = $00a0, type = rw, file = "";
+    IRQCODE:    start = $01a0,  size = $0020, type = rw, file = "";
+    STACK:      start = $01c0,  size = $0040, type = rw, file = "";
     OAM:        start = $0200,  size = $0100, type = rw, file = "";
     BUF:        start = $0300,  size = $0100, type = rw, file = "";
     RAM:        start = $0400,  size = $0400, type = rw, file = "";
@@ -14,8 +14,8 @@ MEMORY {
     BANK_04:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_05:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
     BANK_06:         start = $8000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
-    BANK_07:         start = $8000,  size = $1c00, type = ro, file = %O, fill = yes, fillval = $00;
-    FIXED_BANK_07:   start = $fc00,  size = $0400, type = ro, file = %O, fill = yes, fillval = $00;
+    FIXED_BANK_07:   start = $e000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
+    CHR:             start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -33,7 +33,7 @@ SEGMENTS {
     BANK_04: load = BANK_04, type = ro, optional = yes;
     BANK_05: load = BANK_05, type = ro, optional = yes;
     BANK_06: load = BANK_06, type = ro, optional = yes;
-    BANK_07: load = BANK_07, type = ro, optional = yes;
+    BANK_07: load = FIXED_BANK_07, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_07,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = FIXED_BANK_07,  type = ro, align = $100, optional = yes;
@@ -44,6 +44,7 @@ SEGMENTS {
     INIT:           load = FIXED_BANK_07,  type = ro;
     VECTORS:        load = FIXED_BANK_07,  type = ro,  start = $FFFA;
 
+    CHR:            load = CHR,            type = ro;
 }
 
 SYMBOLS {
@@ -51,7 +52,7 @@ SYMBOLS {
     INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
     INES_SRAM:      type = weak, value = 0;    # no SRAM present
     INES_PRG_BANKS: type = weak, value = 4;    # 16 * 4 = 64 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_CHR_BANKS: type = weak, value = 1;    #  8 * 1 = 8 KiB CHR
     
     MAPPER_VRC4:    type = weak, value = 1;
 }
