Adding CHR mapping to mapper initialization funcs

--- a/irq/src/fme-7/ssplayer-128k.cfg
+++ b/irq/src/fme-7/ssplayer-128k.cfg
@@ -48,7 +48,7 @@ SEGMENTS {
     BANK_0b: load = BANK_0b, type = ro, optional = yes;
     BANK_0c: load = BANK_0c, type = ro, optional = yes;
     BANK_0d: load = BANK_0d, type = ro, optional = yes;
-    BANK_0d: load = BANK_0e, type = ro, optional = yes;
+    BANK_0e: load = BANK_0e, type = ro, optional = yes;
     BANK_0f: load = FIXED_BANK_0f, type = ro, optional = yes;
     
     PLAYBACK_CODE:  load = FIXED_BANK_0f,  type = rw, run = IRQCODE, define = yes;
