Switching header type on non-irq to NES 2.0

--- a/non-irq/src/uxrom/ssplayer-128k.cfg
+++ b/non-irq/src/uxrom/ssplayer-128k.cfg
@@ -42,11 +42,17 @@ SEGMENTS {
 }
 
 SYMBOLS {
-    INES_MAPPER:    type = weak, value = 2;    # UxROM
-    INES_MIRROR:    type = weak, value = 0;    # 0 = horiz, 1 = vert
-    INES_SRAM:      type = weak, value = 0;    # no SRAM present
-    INES_PRG_BANKS: type = weak, value = 8;    # 16 * 8 = 128 KiB PRG
-    INES_CHR_BANKS: type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    INES_MAPPER:           type = weak, value = 2;    # UxROM
+    NES2_SUBMAPPER:        type = weak, value = 2;    # submapper 2 - emulate bus conflicts
+    INES_MIRROR:           type = weak, value = 0;    # 0 = horiz/mapper, 1 = vert
+    NES2_BATTERY:          type = weak, value = 0;    # no battery-backed SRAM present
+    INES_PRG_BANKS:        type = weak, value = 8;    # 16 * 8 = 128 KiB PRG
+    INES_CHR_BANKS:        type = weak, value = 0;    #  8 * 0 = 0 KiB CHR
+    NES2_PRG_RAM_SHIFT:    type = weak, value = 0;    # no PRG-RAM
+    NES2_PRG_NVRAM_SHIFT:  type = weak, value = 0;    # no PRG-NVRAM
+    NES2_CHR_RAM_SHIFT:    type = weak, value = 7;    # 64 << 7 = 8192 B CHR-RAM 
+    NES2_CHR_NVRAM_SHIFT:  type = weak, value = 0;    # no CHR-NVRAM
+    NES2_CPU_TIMING:       type = weak, value = 0;    # "NTSC NES" only
     
     MAPPER_UXROM:   type = weak, value = 1;
 }
