Add graphics loader (used in a demo)

--- a/non-irq/src/nrom/ssplayer-32k.cfg
+++ b/non-irq/src/nrom/ssplayer-32k.cfg
@@ -7,6 +7,7 @@ MEMORY {
     RAM:        start = $0400,  size = $0400, type = rw, file = "";
     HDR:        start = $0000,  size = $0010, type = ro, file = %O, fill = yes, fillval = $00;
     FIXED_BANK_00:    start = $8000,  size = $8000, type = ro, file = %O, fill = yes, fillval = $00;
+    #CHR:        start = $0000,  size = $2000, type = ro, file = %O, fill = yes, fillval = $00;
 }
 
 SEGMENTS {
@@ -25,6 +26,8 @@ SEGMENTS {
     HDRS:           load = FIXED_BANK_00,  type = ro;
     INIT:           load = FIXED_BANK_00,  type = ro;
     VECTORS:        load = FIXED_BANK_00,  type = ro,  start = $FFFA;
+    
+    #CHR:            load = CHR,  type = ro;
 }
 
 SYMBOLS {
