--- a/irq/src/vrc7/ssplayer-512k.cfg
+++ b/irq/src/vrc7/ssplayer-512k.cfg
@@ -149,8 +149,9 @@ SEGMENTS {
     
     PLAYBACK_CODE:  load = FIXED_BANK_3f,  type = rw, run = IRQCODE, define = yes;
     DECODE_UNROLL:  load = BANK_3e,        type = ro, align = $100, optional = yes;
-    DECODE:         load = BANK_3e,        type = ro;
-    DECODE_TABLES:  load = BANK_3e,        type = ro, align = $100;
+    DECODE:         load = BANK_3e,        type = ro, optional = yes;
+    DECODE_TABLES:  load = BANK_3e,        type = ro, align = $100, optional = yes;
+    DECODE_FIXBANK: load = FIXED_BANK_3f,  type = ro, align = $100, optional = yes;
     MAIN:           load = FIXED_BANK_3f,  type = ro;
     HDRS:           load = FIXED_BANK_3f,  type = ro;
     INIT:           load = FIXED_BANK_3f,  type = ro;
