--- a/non-irq/src/uxrom/ssplayer-1024k.cfg
+++ b/non-irq/src/uxrom/ssplayer-1024k.cfg
@@ -144,8 +144,9 @@ SEGMENTS {
     BANK_3e: load = BANK_3e, type = ro, optional = yes;
     BANK_3f: load = FIXED_BANK_3f, type = ro, optional = yes;
 
+    DECODE:         load = FIXED_BANK_3f,  type = ro, align = 16;
+    DECODE_RAMCODE: load = FIXED_BANK_3f, run = RAM, type = rw, align = 16, optional = yes, define = yes;
     DECODE_UNROLL:  load = FIXED_BANK_3f,  type = ro, align = $100, optional = yes;
-    DECODE:         load = FIXED_BANK_3f,  type = ro;
     DECODE_TABLES:  load = FIXED_BANK_3f,  type = ro, align = $100;
     MAIN:           load = FIXED_BANK_3f,  type = ro;
     HDRS:           load = FIXED_BANK_3f,  type = ro;
