--- a/non-irq/src/uxrom/ssplayer-1024k.cfg
+++ b/non-irq/src/uxrom/ssplayer-1024k.cfg
@@ -145,7 +145,7 @@ SEGMENTS {
     BANK_3f: load = FIXED_BANK_3f, type = ro, optional = yes;
 
     DECODE:         load = FIXED_BANK_3f,  type = ro, align = 16;
-    DECODE_RAMCODE: load = FIXED_BANK_3f, run = RAM, type = rw, align = 16, optional = yes, define = yes;
+    DECODE_RAMCODE: load = FIXED_BANK_3f, run = RAM, type = rw, align = $100, optional = yes, define = yes;
     DECODE_UNROLL:  load = FIXED_BANK_3f,  type = ro, align = $100, optional = yes;
     DECODE_TABLES:  load = FIXED_BANK_3f,  type = ro, align = $100;
     MAIN:           load = FIXED_BANK_3f,  type = ro;
